# rust-craft

./: .gitignore  Cargo.toml  README.md  config.toml  todo.txt
.claude/: settings.local.json
saves/chunks/: -12_-5.chunk  -18_3.chunk  -19_3.chunk  -1_-2.chunk  -21_3.chunk  -21_4.chunk  -2_-3.chunk  -38_8.chunk  -39_8.chunk  -40_8.chunk  0_0.chunk  2_-6.chunk  3_-2.chunk  3_-5.chunk
src/: audio.rs  bird.rs  bitmap_font.rs  block.rs  block_mesh.rs  breaking_shader.wgsl  camera.rs  chunk.rs  chunk_loader.rs  chunk_outline_shader.wgsl  chunk_storage.rs  clouds.rs  config.rs  crafting.rs  dropped_item.rs  enemy.rs  inventory.rs  lighting.rs  main.rs  menu.rs  modal.rs  particle.rs  player.rs  renderer.rs  save_context.rs  shader.wgsl  texture.rs  ui_shader.wgsl  underwater_shader.wgsl  water.rs  water_shader.wgsl  world.rs
src/entities/: bird.rs  enemy.rs  fish.rs  humanoid.rs  mod.rs
src/render/: crafting_ui.rs  debug.rs  game_logic.rs  hud.rs  input.rs  mod.rs  pipelines.rs  render_pass.rs
src/shaders/: bloom_shader.wgsl  breaking_shader.wgsl  cloud_shader.wgsl  damage_shader.wgsl  item_cube_shader.wgsl  modal_sand_shader.wgsl  motion_blur_shader.wgsl  outline_shader.wgsl  pause_blur_shader.wgsl  shader.wgsl  shadow_map_shader.wgsl  sky_shader.wgsl  underwater_shader.wgsl  water_shader.wgsl
src/terrain/: biome.rs  generation.rs  mod.rs
