[package]
name = "craft"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
noise = "0.9"
rand = "0.8"
rayon = "1.10"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rodio = "0.17"

[profile.release]
opt-level = 3
lto = true

# Fast iteration build: good performance, no LTO, much faster to compile
[profile.dev-release]
inherits = "release"
lto = false
opt-level = 2
